--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "description": "Angular, Firebase",
   "main": "app.js",
-  "dependencies": {},
+  "dependencies": {
+    "express": "^4.14.0",
+    "path": "^0.12.7"
+  },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
